# DZDMedLog

./: .dockerignore  .gitignore  DOCKERHUB_README.md  Dockerfile  Dockerfile.backend.dockerignore  Dockerfile.server  LICENSE  Makefile  PERMISSIONS.md  README.md  authentik-provisioning-dev.yaml  build_client_dev_env.sh  build_config_docs.sh  build_docker.sh  build_frontend.sh  build_requirement_files.sh  build_server_dev_env.sh  build_static_client.sh  changes.md  dev-notes.md  developer_scratchbook.py  docker-compose.local-demo.yml  docker-compose.local-dev.wip.yml  docker-compose.local-dev.yml  docker-compose.local-postgres.demo.wip.yml  docker-compose.yml  docker.backend.start.sh  dockerfile.backend  dockerfile.frontend  local-demo.sh  memframes_1000.txt  memframes_10000.txt  memframes_100000.txt  package.json  readme.md  run_backend_tests_with_postgres.sh  run_backend_tests_with_sqlite.sh  run_database_migration_scripts_creation.sh  run_dev_backend_server_with_oidc.sh  run_dev_backend_server_with_oidc_and_drug_ftp.sh  (+5 more)
MedLog/backend/: .dockerignore  .gitignore  Dockerfile  README.md  dev_notes.md  env  pyproject.toml  requirements.txt  requirements_docs.txt  requirements_tests.txt  setup.py
MedLog/backend/medlogserver/: __init__.py  app.py  config.py  default_data.yaml  log.py  main.py  memray-flamegraph-main.py.167481.html  memray-flamegraph-main.py.172181.html  run_db_migrations.py  utils.py
MedLog/backend/medlogserver/REST_api/: _routers.py  auth.py  base.py  routers_map.py
MedLog/backend/medlogserver/REST_api/app/: manage_event.py  manage_studies.py  security.py
MedLog/backend/medlogserver/REST_api/auth/: base.py  jwt.py  scheme_local.py  scheme_oidc.py  tokens.py
MedLog/backend/medlogserver/REST_api/routes_app/: routes_event.py  routes_intakes.py  routes_interview.py  routes_study.py  security.py
MedLog/backend/medlogserver/REST_api/user/: manage_local_users.py
MedLog/backend/medlogserver/_default_data/: README.md  default_data.yaml
MedLog/backend/medlogserver/_demo_data/: single_study_demo_data.yaml
MedLog/backend/medlogserver/_dev/: dummy_drug_data_ftp_server.py  ftp_testusers.yaml  oidc_provider_mock_server.py  oidc_testusers.yaml  testusers.yaml
MedLog/backend/medlogserver/api/: _routers.py  auth.py  base.py  paginator.py  routers_map.py  study_access.py
MedLog/backend/medlogserver/api/auth/: base.py  model_token.py  oidc_mappings.py  routes_base.py  scheme_local.py  scheme_oidc.py  security.py  tokens.py  utils.py
MedLog/backend/medlogserver/api/routes/: routes_auth.py  routes_config.py  routes_debug.py  routes_drug.py  routes_drug_db_updater.py  routes_drug_v2.py  routes_event.py  routes_export.py  routes_healthcheck.py  routes_intake.py  routes_interview.py  routes_study.py  routes_study_permission.py  routes_user.py  routes_user_management.py  routes_webclient.py
MedLog/backend/medlogserver/api/routes_app/: routes_drug.py  routes_event.py  routes_intake.py  routes_intakes.py  routes_interview.py  routes_study.py  routes_study_permission.py  routes_study_permissions.py  security.py
MedLog/backend/medlogserver/api/user/: manage_local_users.py
MedLog/backend/medlogserver/db/: __init__.py  _base_crud.py  _base_model.py  _create.py  _engine.py  _init_db.py  _session.py  app_state.py  base.py  event.py  healthcheck.py  intake.py  interview.py  study.py  study_permission.py  user.py  user_auth.py  user_auth_external_oidc_token.py  user_auth_refresh_token.py  user_session.py  worker_job.py
MedLog/backend/medlogserver/db/drug/: drug.py  drug.py.py
MedLog/backend/medlogserver/db/drug_data/: drug.py  drug_code_system.py  drug_dataset_version.py  drug_lov_values.py  drug_search.py
MedLog/backend/medlogserver/db/event/: crud.py  event.py  model.py
MedLog/backend/medlogserver/db/intake/: crud.py  intake.py  model.py
MedLog/backend/medlogserver/db/interview/: crud.py  interview.py  model.py
MedLog/backend/medlogserver/db/med/: med.py
MedLog/backend/medlogserver/db/study/: crud.py  model.py  study.py  study_permission.py
MedLog/backend/medlogserver/db/study_permission/: crud.py  model.py
MedLog/backend/medlogserver/db/user/: crud.py  model.py  user.py  user_auth.py  user_auth_external_oidc_token.py
MedLog/backend/medlogserver/db/user_auth/: crud.py  model.py  (+1 more)
MedLog/backend/medlogserver/db_migrations/: env.py  script.py.mako
MedLog/backend/medlogserver/db_model/: _create.py  base.py  user.py
MedLog/backend/medlogserver/model/: __init__.py  __tables__.py  _base_model.py  _utils.py  app_state.py  app_version.py  auth_scheme.py  auth_scheme_info.py  branding_data.py  drug_data_config.py  drug_updater_status.py  event.py  healthcheck.py  intake.py  interview.py  study.py  study_permission.py  study_permission_doc.py  unset.py  user.py  user_auth.py  user_auth_external_oidc_token.py  user_auth_refresh_token.py  user_info_oidc.py  user_role.py  user_session.py  worker_job.py
MedLog/backend/medlogserver/worker/: __init__.py  ad_hoc_job_runner.py  provisioning_data_loader.py  task.py  wido_gkv_arzneimittelindex_importer.py  worker.py
MedLog/backend/provisioning_data/default_data/: default_data.yaml
MedLog/backend/provisioning_data/demo_data/: readme.md  single_study_demo_data.yaml
MedLog/backend/provisioning_data/dummy_drugset/: zip_dummy_drugsets.py
MedLog/backend/scripts/: generate_config_docs.py
MedLog/backend/tests/: README.md  _single_test_file_runner.py  conftest.py  main.py  statics.py  tests_auth.py  tests_config.py  tests_custom_drug.py  tests_drug.py  tests_drug_db_updater.py  tests_drug_search_ranking.py  tests_drugv2.py  tests_event.py  tests_export.py  tests_health.py  tests_intake.py  tests_intakes.py  tests_interview.py  tests_last_interview_intakes.py  tests_oidc_mapping.py  tests_study.py  tests_study_permission.py  tests_user.py  tests_users.py  tests_webclient.py  utils.py
MedLog/backend/tests/provisioning_data/: single_study_demo_data.yaml
(+816 files in other folders)
