[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "medlogserver"
authors = [{ name = "Tim Bleimehl", email = "bleimehl@helmholtz-munich.de" }]
description = "A Rest API Server on a Postgres DB to store the medical history of study participants."
readme = "README.md"
requires-python = ">=3.11"
keywords = ["DZD", "MedLog"]
license = { text = "MIT" }
classifiers = [
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dynamic = ["version"]
dependencies = [
    "uvicorn",
    "oauthlib",
    "fastapi",
    "starlette",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "Authlib",
    "httpx",
    "sqlmodel",
    "sqlalchemy[asyncio]",
    "aiosqlite",
    "itsdangerous",
    "pyyaml",
    "pydantic",
    "pydantic[email]",
    "pydantic_settings",
    "Click",
    "getversion",
    "pip-tools",
    "python-multipart",
    "apscheduler",
    "async-lru",
]

[project.optional-dependencies]
tests = ["pytest", "requests", "oidc-provider-mock"]
docs = ["mkdocs", "mkdocstrings[python]", "mkdocs-autorefs", "mkdocs-material"]


[tool.setuptools.packages.find]
include = ['medlogserver', 'provisioning_data']

[project.scripts]
medlogserver = "medlogserver.main:start"
