[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "medlogserver"
authors = [{ name = "Tim Bleimehl", email = "bleimehl@helmholtz-munich.de" }]
description = "A Rest API Server on a Postgres DB to store the medical history of study participants."
readme = "README.md"
requires-python = ">=3.11"
keywords = ["DZD", "MedLog"]
license = { text = "MIT" }
classifiers = [
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dynamic = ["version"]

dependencies = [
    "uvicorn",
    "fastapi",
    "starlette",
    "python-multipart",
    "Authlib",
    "httpx",
    "bcrypt",
    "sqlmodel == 0.0.31",  # https://github.com/DZD-eV-Diabetes-Research/DZDMedLog/issues/226
    "sqlalchemy[asyncio]",
    "aiosqlite",
    "pyyaml",
    "pydantic",
    "pydantic[email]",
    "pydantic_settings",
    "setuptools-scm",      # replaces getversion for runtime version detection
    "apscheduler",
    "polars",
    "psycopg[binary]",
    "alembic",
]

[project.optional-dependencies]
tests = [
    "pytest",
    "requests",
    "oidc-provider-mock",
    "memory_profiler",
    "pyftpdlib",
]
docs = ["mkdocs", "mkdocstrings[python]", "mkdocs-autorefs", "mkdocs-material"]

[tool.setuptools.packages.find]
include = ['medlogserver', 'provisioning_data']

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "node-and-date"   # appends commit hash and date
search_parent_directories = true

[project.scripts]
medlogserver = "medlogserver.main:start"
