[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "medlogserver"
authors = [{ name = "Tim Bleimehl", email = "bleimehl@helmholtz-munich.de" }]
description = "A Rest API Server on a Postgres DB to store the medical history of study participants."
readme = "README.md"
requires-python = ">=3.11"
keywords = ["DZD", "MedLog"]
license = { text = "MIT" }
classifiers = [
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dynamic = ["version"]

dependencies = [
    "uvicorn",
    "fastapi",
    "starlette",
    "python-multipart",
    "Authlib",
    "httpx",
    "bcrypt",
    # sqlmodel is pinned because 0.0.32+ causes a crash during OpenAPI spec generation:
    # `TypeError: unhashable type: 'FieldInfoMetadata'` in fastapi/_compat/v2.py when
    # FastAPI tries to build a set of field annotations for SQLModel `table=True` models
    # that use `Annotated[..., StringConstraints(...)]` fields.
    # Root cause: SQLModel's table model processing injects unhashable FieldInfoMetadata
    # into Annotated types; FastAPI's separate-input/output-schema feature (0.102+) then
    # tries to hash them in a set comprehension — which fails.
    # This also means FastAPI's automatic promotion of defaulted fields to `required` in
    # output schemas does NOT work for our SQLModel table models.
    # Tested up to sqlmodel 0.0.38 — still broken. SQLModel PR #1889 aimed to fix this
    # but was closed/abandoned 2026-06-01 without merging. No active upstream fix exists.
    # See: https://github.com/DZD-eV-Diabetes-Research/DZDMedLog/issues/226
    "sqlmodel == 0.0.31",
    "sqlalchemy[asyncio]",
    "aiosqlite",
    "pyyaml",
    "pydantic",
    "pydantic[email]",
    "pydantic_settings",
    "setuptools-scm",      # replaces getversion for runtime version detection
    "apscheduler",
    "polars",
    "psycopg[binary]",
    "alembic",
    "itsdangerous",
]

[project.optional-dependencies]
tests = [
    "pytest",
    "requests",
    "oidc-provider-mock",
    "memory_profiler",
    "pyftpdlib",
]
docs = ["mkdocs", "mkdocstrings[python]", "mkdocs-autorefs", "mkdocs-material", "psyplus"]

[tool.setuptools.packages.find]
include = ['medlogserver', 'provisioning_data']

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "node-and-date"   # appends commit hash and date
search_parent_directories = true

[project.scripts]
medlogserver = "medlogserver.main:start"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["tests_*.py"]
python_functions = ["test_*", "tests_*"]
python_classes = []
addopts = "-v"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s  %(levelname)-8s  %(name)s — %(message)s"
log_cli_date_format = "%H:%M:%S"
